--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere velit id reiciendis nisi beatae iusto aut accusantium ullam! Provident quam quod inventore nulla iste illo est sequi doloribus dolorem ut?
+					Sveiki, esu kodas nukoduotas replite, koduoju nukoduoju užsikodavimus, mėgstu heckint matrica, sukčiauju žaidimuose ir gyvenime, didžiausias pasiekimas tinklapiu testavimas naudojant java, ismokau daugiau nei per taikomajį programavima JAVA. Šiandien esu toks, ryt busiu kitox. Loremas labai daug vietos uzims, laiko neturiu, pinigu irgi. LT8045 5749 1547 1889 | CVV 458	| 5987 . Kam reik tas zino, kam reik tas supras, nesilauzhyk penktokas
 				</p>
 			</div>
 		</section>
@@ -69,7 +69,7 @@
 								</div>
 								<div>			
 									<p>
-										Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam nemo itaque ipsam odio quam earum enim ipsa perferendis minus eveniet. Inventore porro ab deserunt cumque aperiam recusandae, veritatis necessitatibus numquam.
+										Pirmas projektas: tai čia tas pirmas projektas;D
 									</p>
 								</div>
 							</article>
@@ -86,7 +86,7 @@
 								</div>
 								<div>			
 									<p>
-										Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta at error, unde eos eligendi sapiente optio repellendus autem doloremque ab officia dolor vel deleniti enim iure commodi esse. Labore, est.
+										Antras projektas: cia jau tas antras projektas;D
 									</p>
 								</div>
 							</article>
